fixed the /#experience and /#projects and smooth scroll on tablet nav

--- a/style/input.scss
+++ b/style/input.scss
@@ -279,7 +279,8 @@ nav#main-nav {
 
 #about,
 #experience,
-#projects {
+#projects 
+{
   // scroll-margin-top: 200px;
   scroll-margin-top: var(--scroll-align-offset, 0px);
   // opacity: 0;
@@ -320,7 +321,7 @@ section {
       .about-pic-cont {
         position: relative;
         width: 100%;
-        height: 300px;
+        height: 250px;
         overflow: hidden;
         // display: block;
         // height: 100px;
@@ -659,7 +660,7 @@ section {
     & > #about,
     #experience,
     #projects {
-      scroll-margin-top: 10px;
+      scroll-margin-top: 100px;
     }
   }
   nav#mobile-sticky-nav.sticky {
@@ -721,7 +722,7 @@ section {
 
   div.about {
     // padding-top: 200px;
-    padding-top: 20px !important;
+    // padding-top: 20px !important;
   }
 
   .mobile-resume {
@@ -788,6 +789,17 @@ section {
       z-index: 10;
     }
   }
+
+  #about,
+  #experience,
+  #projects {
+    // scroll-margin-top: 200px;
+    scroll-margin-top: 10px !important;
+    // opacity: 0;
+    // transition: 2s ease-in-out;
+  }
+
+
 }
 
 #intro-content {
