--- a/style/output.css
+++ b/style/output.css
@@ -242,7 +242,7 @@ section .about .about-heading {
 section .about .about-header .about-pic-cont {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 250px;
   overflow: hidden;
 }
 section .about .about-header .about-pic-cont .about-pic {
@@ -456,7 +456,7 @@ section .projects-img-cont img {
   section#content > #about,
   section#content #experience,
   section#content #projects {
-    scroll-margin-top: 10px;
+    scroll-margin-top: 100px;
   }
   nav#mobile-sticky-nav.sticky {
     display: block;
@@ -490,9 +490,6 @@ section .projects-img-cont img {
   #experience,
   #projects {
     scroll-margin-top: 75px !important;
-  }
-  div.about {
-    padding-top: 20px !important;
   }
   .mobile-resume {
     border: 1px solid #323d41;
@@ -546,6 +543,11 @@ section .projects-img-cont img {
     padding: 20px 10px 0 0;
     margin: 0;
     z-index: 10;
+  }
+  #about,
+  #experience,
+  #projects {
+    scroll-margin-top: 10px !important;
   }
 }
 .row {
